and more efficient index files.  This format can be specified when
creating a new repository, or used to losslessly upgrade an existing
repository.  bzr 1.9 also speeds most operations over the smart server
protocol, makes annotate faster, and uses less memory when making
checkouts or pulling large amounts of data.

  BUG FIXES:

   * Fix SSL/https on Python2.6.  (Vincent Ladeuil, #293054)


Bzr 1.9rc1 2008-10-31
---------------------

  NEW FEATURES:

    * New Branch hook ``transform_fallback_location`` allows a function to
      be called when looking up the stacked source. (Michael Hudson)

    * New repository formats ``1.9`` and ``1.9-rich-root``. These have all
      the functionality of ``1.6``, but use the new btree indexes.
      These indexes are both smaller and faster for access to historical
      information.  (John Arbash Meinel)

  IMPROVEMENTS:

    * ``BTreeIndex`` code now is able to prefetch extra pages to help tune
      the tradeoff between bandwidth and latency. Should be tuned
      appropriately to not impact commands which need minimal information,
      but provide a significant boost to ones that need more context. Only
      has a direct impact on the ``--development2`` format which uses
      btree's for the indexes. (John Arbash Meinel)

    * ``bzr dump-btree`` is a hidden command introduced to allow dumping
      the contents of a compressed btree file.  (John Arbash Meinel)

    * ``bzr pack`` now tells the index builders to optimize for size. For
      btree index repositories, this can save 25% of the index size
      (mostly in the text indexes). (John Arbash Meinel)

    * ``bzr push`` to an existing branch or repository on a smart server
      is faster, due to Bazaar making more use of the ``get_parent_map``
      RPC when querying the remote branch's revision graph.
      (Andrew Bennetts)

    * default username for bzr+ssh and sftp can be configured in
      authentication.conf. (Aaron Bentley)
